fixed title and footer alignments

--- a/app/assets/stylesheets/report.css
+++ b/app/assets/stylesheets/report.css
@@ -30,7 +30,6 @@
 
 #report_table_container { 
   width: 100%; 
-  height: 680px; 
   font-size:14px; 
 }
 
